--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,1 @@
-<div style="text-align:center; margin-top: 50px;">
-  <h1>Class Check</h1>
-
-  <qrcode [qrdata]="counter().toString()" [width]="256" [errorCorrectionLevel]="'M'"></qrcode>
-
-  <p>Contador atual: {{ counter() }}</p>
-  <p>Próximo em: {{ secondsLeft() }}s</p>
-</div>
+<router-outlet></router-outlet>
