--- a/src/app/components/check-class/check-class.component.scss
+++ b/src/app/components/check-class/check-class.component.scss
@@ -1,13 +1,45 @@
+:host {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.top-menu {
+  display: flex;
+  width: 100%;
+  padding: 5vw;
+  background-color: orangered;
+  box-sizing: border-box;
+}
+
+.content {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;   /* centraliza verticalmente */
+  align-items: center;       /* centraliza horizontalmente */
+  box-sizing: border-box;
+  padding: 20px;
+  width: 100%;
+}
+
 button {
-    padding: 10px 20px;
-    font-size: 18px;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  
-  button:hover {
-    background-color: #0056b3;
-  }
+  margin-bottom: 20px;
+  padding: 10px 20px;
+  font-size: 18px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #0056b3;
+}
+
+zxing-scanner {
+  width: 90%;
+  height: 70vh;
+  background-color: black;
+}
