--- a/src/app/components/check-class/check-class.component.scss
+++ b/src/app/components/check-class/check-class.component.scss
@@ -16,8 +16,8 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;   /* centraliza verticalmente */
-  align-items: center;       /* centraliza horizontalmente */
+  justify-content: center;   
+  align-items: center;       
   box-sizing: border-box;
   padding: 20px;
   width: 100%;
