Style: login/register page/2

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -18,7 +18,7 @@
       />
       <button type="submit" [disabled]="loginForm.invalid">Acessar</button>
     </form>
-    <a routerLink="/register">Cadastrar</a>
+    <a href="../register/">Cadastrar</a>
     <p *ngIf="loginError" class="error">Usuário ou senha inválidos.</p>
   </div>
 </div>
