--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -38,7 +38,7 @@ input::placeholder {
 }
 
 button {
-  font-size: 16px;
+  font-size: 24px;
   height: 50px;
   width: 95%;
   padding: 0;
@@ -50,13 +50,17 @@ button {
   cursor: pointer;
   display: flex;
   align-items: center;
-  justify-content: center; /* Centraliza o texto */
+  justify-content: center;
   margin: 0 auto;
   margin-bottom: 12px;
 }
 
 button:disabled {
   background: #aaa;
+}
+
+button:focus {
+  background: #E5862C;
 }
 
 .login-container a {
@@ -70,14 +74,13 @@ button:disabled {
   color: #F39237;
   text-decoration: none;
   font-weight: bold;
-  font-size: 16px;
+  font-size: 24px;
   margin: 0 auto;
   border: 1px solid #F39237;
 }
 
-.buttons {
-  width: 100%;
-  bottom: 30px;
+.login-container a:focus {
+  background: #D9D9D9;
 }
 
 .error {
