--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,12 +1,19 @@
 <div class="wrapper">
-  <div class="login-container">
-    <h2 class="login-label">Login</h2>
-    <form (ngSubmit)="onLogin()" #loginForm="ngForm">
+  <div class="register-container">
+    <h2 class="register-label">CADASTRAR</h2>
+    <form (ngSubmit)="onRegister()" #registerForm="ngForm">
       <input
         type="text"
-        name="username"
-        [(ngModel)]="username"
-        placeholder="Usuário"
+        name="name"
+        [(ngModel)]="name"
+        placeholder="Nome Completo"
+        required
+      />
+      <input
+        type="email"
+        name="email"
+        [(ngModel)]="email"
+        placeholder="Email"
         required
       />
       <input
@@ -16,9 +23,16 @@
         placeholder="Senha"
         required
       />
-      <button type="submit" [disabled]="loginForm.invalid">Acessar</button>
-      <a routerLink="/register">Cadastrar</a>
+      <input
+        type="password"
+        name="password2"
+        [(ngModel)]="password2"
+        placeholder="Confirmar Senha"
+        required
+      />
+      <button type="submit" [disabled]="registerForm.invalid">Cadastrar</button>
+      <a href="../login/">Acessar</a>
     </form>
-    <p *ngIf="loginError" class="error">Usuário ou senha inválidos.</p>
+    <p *ngIf="registerError" class="error">Usuário ou senha inválidos.</p>
   </div>
 </div>
