--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -4,9 +4,9 @@
     <form (ngSubmit)="onLogin()" #loginForm="ngForm">
       <input
         type="text"
-        name="username"
-        [(ngModel)]="username"
-        placeholder="Usuário"
+        name="email"
+        [(ngModel)]="email"
+        placeholder="E-mail"
         required
       />
       <input
@@ -18,7 +18,10 @@
       />
       <button type="submit" [disabled]="loginForm.invalid">Acessar</button>
     </form>
-    <a href="../register/">Cadastrar</a>
+
+    <a routerLink="/register">Cadastrar</a>
+
     <p *ngIf="loginError" class="error">Usuário ou senha inválidos.</p>
+
   </div>
 </div>
