--- a/frontend/src/app/components/register/register.component.html
+++ b/frontend/src/app/components/register/register.component.html
@@ -2,37 +2,44 @@
   <div class="register-container">
     <h2 class="register-label">CADASTRAR</h2>
     <form (ngSubmit)="onRegister()" #registerForm="ngForm">
-      <input
-        type="text"
-        name="name"
-        [(ngModel)]="name"
+      <input 
+        type="text" 
+        id="name" 
+        name="name" 
         placeholder="Nome Completo"
+        [(ngModel)]="registerData.nome" 
         required
       />
-      <input
-        type="email"
-        name="email"
-        [(ngModel)]="email"
-        placeholder="Email"
-        required
+
+      <input 
+        type="email" 
+        id="email" 
+        name="email" 
+        placeholder="E-mail"
+        [(ngModel)]="registerData.email" 
+        required 
+        email
       />
-      <input
-        type="password"
-        name="password"
-        [(ngModel)]="password"
+
+      <input 
+        type="password" 
+        id="password" 
+        name="password" 
         placeholder="Senha"
-        required
+        [(ngModel)]="registerData.senha" 
+        required 
+        minlength="6"
       />
-      <input
-        type="password"
-        name="password2"
-        [(ngModel)]="password2"
-        placeholder="Confirmar Senha"
-        required
-      />
-      <button type="submit" [disabled]="registerForm.invalid">Cadastrar</button>
-      <a href="../login/">Acessar</a>
+
+      <button type="submit" [disabled]="!registerForm.form.valid">Registrar</button>
+
     </form>
-    <p *ngIf="registerError" class="error">Usuário ou senha inválidos.</p>
+
+    <div *ngIf="registerError" class="error-message">
+      Ocorreu um erro ao tentar se cadastrar. Tente novamente.
+    </div>
+
+    <a routerLink="/login">Faça o login</a>
+
   </div>
 </div>
