--- a/frontend/src/app/components/register/register.component.scss
+++ b/frontend/src/app/components/register/register.component.scss
@@ -50,7 +50,7 @@ button {
   cursor: pointer;
   display: flex;
   align-items: center;
-  justify-content: center; /* Centraliza o texto */
+  justify-content: center; 
   margin: 0 auto;
   margin-bottom: 12px;
 }
